fixed typo in directory.cs, edited .gitignore
.gitignore: ignoring generatedOutput folder and _Test.cs files

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Project Specific Ignores
+*GeneratedOutput/
+*GeneratedOutput.meta
+*_[Tt]est.cs*
